# AndroidDetection

./: .gitignore  README.md  build.gradle  local.properties  readme.md
app/: CMakeLists.txt  CMakeLists_bak.txt  build.gradle
app/src/main/assets/: face_keypoint_0225.mnn  face_lite.mnn  keyPoint_96.mnn  key_cpu.mnn  nme_min_aug_96_arm82.mnn  nme_min_aug_96_gpu.mnn  nme_min_aug_cpu.mnn  nme_min_aug_vulkan.mnn
app/src/main/cpp/: Face.cpp  Face.hpp  jni.cpp  litedet.cpp  litedet.hpp  net.cpp  net.h
app/src/main/cpp/include/opencv2/: core.hpp
app/src/main/cpp/include/opencv2/core/: core_c.h
app/src/main/java/com/facesdk/: FaceSDKNative.java  MainActivity.java  SelfDefine.java  Utils.java
gradle/wrapper/: gradle-wrapper.properties
